--- a/capsule/collections/cartas/random/2001-10-09_on_fences_and_property.gmi
+++ b/capsule/collections/cartas/random/2001-10-09_on_fences_and_property.gmi
@@ -1,7 +1,7 @@
 # On Fences and Property
 
 => /collections/cartas/random/2001-07-25_boring_bird_talk.gmi ← 2001-07-25 Boring Bird Talk
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2001-10-09_the_gloucester_cheese_race.gmi 2001-10-09 The Gloucester Cheese Race →
 
 ---
