--- a/capsule/collections/cartas/random/2002-09-11_the_horse_at_the_gates.gmi
+++ b/capsule/collections/cartas/random/2002-09-11_the_horse_at_the_gates.gmi
@@ -1,7 +1,7 @@
 # The Horse at the Gates
 
 => /collections/cartas/random/2002-04-19_sombreros_and_sophistication.gmi ← 2002-04-19 Sombreros And Sophistication
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2003-02-24_helio_the_hermeneut.gmi 2003-02-24 Helio The Hermeneut →
 
 ---
