--- a/capsule/collections/cartas/random/2003-08-27_still_on_cetaceans.gmi
+++ b/capsule/collections/cartas/random/2003-08-27_still_on_cetaceans.gmi
@@ -1,7 +1,7 @@
 # Still on Cetaceans
 
 => /collections/cartas/random/2003-07-21_conversation_starter_dolphin_bite.gmi ← 2003-07-21 Conversation Starter Dolphin Bite
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2003-09-12_vikings_montaigne_and_a_fat_toad.gmi 2003-09-12 Vikings Montaigne And A Fat Toad →
 
 ---
