--- a/capsule/collections/cartas/random/2004-04-06_icebreaker_alfredo_s_swim_briefs.gmi
+++ b/capsule/collections/cartas/random/2004-04-06_icebreaker_alfredo_s_swim_briefs.gmi
@@ -1,7 +1,7 @@
 # Icebreaker: Alfredo's Swim Briefs
 
 => /collections/cartas/random/2004-01-05_super_pla_1969.gmi ← 2004-01-05 Super Pla 1969
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2004-04-20_pan_games_flash.gmi 2004-04-20 Pan Games Flash →
 
 ---
