--- a/capsule/collections/cartas/random/2005-05-17_joel_stole_my_gibao.gmi
+++ b/capsule/collections/cartas/random/2005-05-17_joel_stole_my_gibao.gmi
@@ -1,7 +1,7 @@
 # Joel Stole My Gibao
 
 => /collections/cartas/random/2005-04-22_noise_proves_nothing.gmi ← 2005-04-22 Noise Proves Nothing
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2005-06-30_germany_vs_south_korea_broadcast.gmi 2005-06-30 Germany Vs South Korea Broadcast →
 
 ---
