--- a/capsule/collections/cartas/random/2005-12-14_ape_men_in_sweden.gmi
+++ b/capsule/collections/cartas/random/2005-12-14_ape_men_in_sweden.gmi
@@ -1,7 +1,7 @@
 # Ape-Men in Sweden
 
 => /collections/cartas/random/2005-11-24_part_camel.gmi ← 2005-11-24 Part Camel
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2005-12-27_darfur_is_a_mess.gmi 2005-12-27 Darfur Is A Mess →
 
 ---
