--- a/capsule/collections/cartas/random/2007-01-15_grandpa_simpson_s_onion_belt.gmi
+++ b/capsule/collections/cartas/random/2007-01-15_grandpa_simpson_s_onion_belt.gmi
@@ -1,7 +1,7 @@
 # Grandpa Simpson's Onion Belt
 
 => /collections/cartas/random/2006-09-12_after_watching_the_farm_a_fazenda.gmi ← 2006-09-12 After Watching The Farm A Fazenda
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2007-04-12_breaking_news_badgers.gmi 2007-04-12 Breaking News Badgers →
 
 ---
