--- a/capsule/collections/cartas/random/2010-01-29_the_disguised_gorilla.gmi
+++ b/capsule/collections/cartas/random/2010-01-29_the_disguised_gorilla.gmi
@@ -1,7 +1,7 @@
 # The Disguised Gorilla
 
 => /collections/cartas/random/2009-05-29_official_city_drunk.gmi ← 2009-05-29 Official City Drunk
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2010-02-17_amapa_s_26_guinea_fowl.gmi 2010-02-17 Amapa S 26 Guinea Fowl →
 
 ---
