--- a/capsule/collections/cartas/random/2012-02-17_237_reasons_for_the_old_days.gmi
+++ b/capsule/collections/cartas/random/2012-02-17_237_reasons_for_the_old_days.gmi
@@ -1,7 +1,7 @@
 # 237 Reasons for the Old Days
 
 => /collections/cartas/random/2011-12-14_male_nipple_question.gmi ← 2011-12-14 Male Nipple Question
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2012-03-27_in_praise_of_human_lard.gmi 2012-03-27 In Praise Of Human Lard →
 
 ---
