--- a/capsule/collections/cartas/random/2012-03-27_in_praise_of_human_lard.gmi
+++ b/capsule/collections/cartas/random/2012-03-27_in_praise_of_human_lard.gmi
@@ -1,7 +1,7 @@
 # In Praise of Human Lard
 
 => /collections/cartas/random/2012-02-17_237_reasons_for_the_old_days.gmi ← 2012-02-17 237 Reasons For The Old Days
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2012-05-07_borrowing_an_eraser.gmi 2012-05-07 Borrowing An Eraser →
 
 ---
