--- a/capsule/collections/cartas/random/2012-05-07_borrowing_an_eraser.gmi
+++ b/capsule/collections/cartas/random/2012-05-07_borrowing_an_eraser.gmi
@@ -1,7 +1,7 @@
 # Borrowing an Eraser
 
 => /collections/cartas/random/2012-03-27_in_praise_of_human_lard.gmi ← 2012-03-27 In Praise Of Human Lard
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2013-03-15_ivo_who_saw_the_grape.gmi 2013-03-15 Ivo Who Saw The Grape →
 
 ---
