--- a/capsule/collections/cartas/random/2016-07-04_community_idea_cured_by_citrus.gmi
+++ b/capsule/collections/cartas/random/2016-07-04_community_idea_cured_by_citrus.gmi
@@ -1,7 +1,7 @@
 # Community Idea: Cured by Citrus
 
 => /collections/cartas/random/2016-05-17_community_idea_edecarlos_law_yer.gmi ← 2016-05-17 Community Idea Edecarlos Law Yer
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 
 ---
 
