--- a/capsule/collections/cartas/random/2002-03-07_telerj.gmi
+++ b/capsule/collections/cartas/random/2002-03-07_telerj.gmi
@@ -1,7 +1,7 @@
 # Telerj
 
 => /collections/cartas/random/2002-02-08_stuffed_tiger_argument.gmi ← 2002-02-08 Stuffed Tiger Argument
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2002-04-09_grandpa_simpson_on_labels.gmi 2002-04-09 Grandpa Simpson On Labels →
 
 ---
