--- a/capsule/collections/cartas/random/2003-02-24_helio_the_hermeneut.gmi
+++ b/capsule/collections/cartas/random/2003-02-24_helio_the_hermeneut.gmi
@@ -1,7 +1,7 @@
 # Helio the Hermeneut
 
 => /collections/cartas/random/2002-09-11_the_horse_at_the_gates.gmi ← 2002-09-11 The Horse At The Gates
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2003-03-18_corporate_ear_muffs.gmi 2003-03-18 Corporate Ear Muffs →
 
 ---
