--- a/capsule/collections/cartas/random/2003-03-18_corporate_ear_muffs.gmi
+++ b/capsule/collections/cartas/random/2003-03-18_corporate_ear_muffs.gmi
@@ -1,7 +1,7 @@
 # Corporate Ear Muffs
 
 => /collections/cartas/random/2003-02-24_helio_the_hermeneut.gmi ← 2003-02-24 Helio The Hermeneut
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2003-07-21_conversation_starter_dolphin_bite.gmi 2003-07-21 Conversation Starter Dolphin Bite →
 
 ---
