--- a/capsule/collections/cartas/random/2004-01-05_super_pla_1969.gmi
+++ b/capsule/collections/cartas/random/2004-01-05_super_pla_1969.gmi
@@ -1,7 +1,7 @@
 # Super Pla (1969)
 
 => /collections/cartas/random/2003-09-12_vikings_montaigne_and_a_fat_toad.gmi ← 2003-09-12 Vikings Montaigne And A Fat Toad
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2004-04-06_icebreaker_alfredo_s_swim_briefs.gmi 2004-04-06 Icebreaker Alfredo S Swim Briefs →
 
 ---
