--- a/capsule/collections/cartas/random/2005-04-22_noise_proves_nothing.gmi
+++ b/capsule/collections/cartas/random/2005-04-22_noise_proves_nothing.gmi
@@ -1,7 +1,7 @@
 # Noise Proves Nothing
 
 => /collections/cartas/random/2004-12-03_christmas_tales_gdansk_or_kelvin.gmi ← 2004-12-03 Christmas Tales Gdansk Or Kelvin
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2005-05-17_joel_stole_my_gibao.gmi 2005-05-17 Joel Stole My Gibao →
 
 ---
