--- a/capsule/collections/cartas/random/2005-12-27_darfur_is_a_mess.gmi
+++ b/capsule/collections/cartas/random/2005-12-27_darfur_is_a_mess.gmi
@@ -1,7 +1,7 @@
 # Darfur Is a Mess
 
 => /collections/cartas/random/2005-12-14_ape_men_in_sweden.gmi ← 2005-12-14 Ape Men In Sweden
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2006-06-30_restaurant_review_le_domaine_de_chateauvieux.gmi 2006-06-30 Restaurant Review Le Domaine De Chateauvieux →
 
 ---
