--- a/capsule/collections/cartas/random/2006-09-12_after_watching_the_farm_a_fazenda.gmi
+++ b/capsule/collections/cartas/random/2006-09-12_after_watching_the_farm_a_fazenda.gmi
@@ -1,7 +1,7 @@
 # After Watching 'The Farm' (A Fazenda)
 
 => /collections/cartas/random/2006-06-30_restaurant_review_le_domaine_de_chateauvieux.gmi ← 2006-06-30 Restaurant Review Le Domaine De Chateauvieux
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2007-01-15_grandpa_simpson_s_onion_belt.gmi 2007-01-15 Grandpa Simpson S Onion Belt →
 
 ---
