--- a/capsule/collections/cartas/random/2008-01-21_san_marino_gdp_shares_1952.gmi
+++ b/capsule/collections/cartas/random/2008-01-21_san_marino_gdp_shares_1952.gmi
@@ -1,7 +1,7 @@
 # San Marino GDP Shares (1952)
 
 => /collections/cartas/random/2007-08-03_thailand_s_petition_husband.gmi ← 2007-08-03 Thailand S Petition Husband
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2008-05-23_pigeons_and_peace.gmi 2008-05-23 Pigeons And Peace →
 
 ---
