--- a/capsule/collections/cartas/random/2010-04-23_an_aparicio_on_the_pitch.gmi
+++ b/capsule/collections/cartas/random/2010-04-23_an_aparicio_on_the_pitch.gmi
@@ -1,7 +1,7 @@
 # An Aparicio on the Pitch
 
 => /collections/cartas/random/2010-02-17_amapa_s_26_guinea_fowl.gmi ← 2010-02-17 Amapa S 26 Guinea Fowl
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2010-05-19_notable_birthdays_june_7.gmi 2010-05-19 Notable Birthdays June 7 →
 
 ---
