--- a/capsule/collections/cartas/random/2011-04-14_tsetse_fly_chorus.gmi
+++ b/capsule/collections/cartas/random/2011-04-14_tsetse_fly_chorus.gmi
@@ -1,7 +1,7 @@
 # Tsetse Fly Chorus
 
 => /collections/cartas/random/2010-11-22_pablo_escobar_samba.gmi ← 2010-11-22 Pablo Escobar Samba
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2011-05-25_hydrogenated_fat_parade.gmi 2011-05-25 Hydrogenated Fat Parade →
 
 ---
