--- a/capsule/collections/cartas/random/2011-12-14_male_nipple_question.gmi
+++ b/capsule/collections/cartas/random/2011-12-14_male_nipple_question.gmi
@@ -1,7 +1,7 @@
 # Male Nipple Question
 
 => /collections/cartas/random/2011-11-25_catheterization_samba.gmi ← 2011-11-25 Catheterization Samba
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2012-02-17_237_reasons_for_the_old_days.gmi 2012-02-17 237 Reasons For The Old Days →
 
 ---
