--- a/capsule/collections/cartas/random/2014-01-29_small_talk_across_species.gmi
+++ b/capsule/collections/cartas/random/2014-01-29_small_talk_across_species.gmi
@@ -1,7 +1,7 @@
 # Small Talk Across Species
 
 => /collections/cartas/random/2013-07-04_buying_a_flea.gmi ← 2013-07-04 Buying A Flea
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2014-02-07_more_coffee_kofi.gmi 2014-02-07 More Coffee Kofi →
 
 ---
