--- a/capsule/collections/cartas/random/2014-02-07_more_coffee_kofi.gmi
+++ b/capsule/collections/cartas/random/2014-02-07_more_coffee_kofi.gmi
@@ -1,7 +1,7 @@
 # More Coffee, Kofi?
 
 => /collections/cartas/random/2014-01-29_small_talk_across_species.gmi ← 2014-01-29 Small Talk Across Species
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2014-03-31_small_talk_with_an_epidemiologist.gmi 2014-03-31 Small Talk With An Epidemiologist →
 
 ---
