--- a/capsule/collections/cartas/random/2014-03-31_small_talk_with_an_epidemiologist.gmi
+++ b/capsule/collections/cartas/random/2014-03-31_small_talk_with_an_epidemiologist.gmi
@@ -1,7 +1,7 @@
 # Small Talk with an Epidemiologist
 
 => /collections/cartas/random/2014-02-07_more_coffee_kofi.gmi ← 2014-02-07 More Coffee Kofi
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2014-05-07_small_talk_with_an_occupational_therapist.gmi 2014-05-07 Small Talk With An Occupational Therapist →
 
 ---
