--- a/capsule/collections/cartas/random/2015-08-18_community_idea_the_greatest_tourniquet.gmi
+++ b/capsule/collections/cartas/random/2015-08-18_community_idea_the_greatest_tourniquet.gmi
@@ -1,7 +1,7 @@
 # Community Idea: The Greatest Tourniquet
 
 => /collections/cartas/random/2015-06-10_community_idea_the_great_stoat_revolution.gmi ← 2015-06-10 Community Idea The Great Stoat Revolution
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2015-08-31_community_idea_nelson_the_bearded_lady.gmi 2015-08-31 Community Idea Nelson The Bearded Lady →
 
 ---
