--- a/capsule/collections/cartas/random/2016-02-23_community_idea_barry_pepper_and_the_dolphin.gmi
+++ b/capsule/collections/cartas/random/2016-02-23_community_idea_barry_pepper_and_the_dolphin.gmi
@@ -1,7 +1,7 @@
 # Community Idea: Barry Pepper and the Dolphin
 
 => /collections/cartas/random/2015-11-18_community_idea_obscure_biblical_characters.gmi ← 2015-11-18 Community Idea Obscure Biblical Characters
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2016-03-24_community_idea_pure_corn_starch.gmi 2016-03-24 Community Idea Pure Corn Starch →
 
 ---
