--- a/capsule/collections/cartas/random/2016-05-03_community_idea_better_english_than_hugh_grant.gmi
+++ b/capsule/collections/cartas/random/2016-05-03_community_idea_better_english_than_hugh_grant.gmi
@@ -1,7 +1,7 @@
 # Community Idea: Better English than Hugh Grant
 
 => /collections/cartas/random/2016-03-24_community_idea_pure_corn_starch.gmi ← 2016-03-24 Community Idea Pure Corn Starch
-=> /collections/cartas/random/index.gmi ↑ Índice da seção
+=> /collections/cartas/random/index.gmi ↑ Section index
 => /collections/cartas/random/2016-05-17_community_idea_edecarlos_law_yer.gmi 2016-05-17 Community Idea Edecarlos Law Yer →
 
 ---
